[package]
name = "website-tooling"
version = "0.2.0"
edition = "2024"
description = "Tool for appending file hashes to file names"

[dependencies]
anyhow = "1.0.47"
camino = { version = "1.1", features = ["serde1"] }
cap-std = { version = "3.4", features = ["fs_utf8"] }
clap = { version = "4.5", features = ["cargo", "derive"] }
const-hex = "1.15"
oxc_allocator = "0.101.0"
oxc_codegen = "0.101.0"
oxc_minifier = "0.101.0"
oxc_parser = "0.101.0"
oxc_span = "0.101.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.8"
toml = "0.9.5"
